# Postopek

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
scripts/: first_run.bat
src/: Application.cpp  Application.h  EngineWrapper.cpp  EngineWrapper.h  MD_parser.cpp  MD_parser.h  MarkdownParser.cpp  MarkdownParser.h  StateTracker.h  Utilities.cpp  Utilities.h  ValidationCheck.cpp  ValidationCheck.h  WindowsUtilities.h  main.cpp  utils.cpp  utils.h  validation.cpp  validation.h  windows_utils.h
src/SpecialComponents/: SpecialCheckbox.cpp  SpecialCheckbox.h
src/components/: UpdateButton.cpp  UpdateButton.h  personalComponents.cpp  personalComponents.h
temp_resources/: coffee.md  smoothie.md
